--- a/src/main/webapp/components/meeting/list.html
+++ b/src/main/webapp/components/meeting/list.html
@@ -3,7 +3,7 @@
 </div>
 
 <div ng-if="meetingList.$resolved && (!meetingList.items || meetingList.items.length==0)">
-	<p class="empty-list-message">No meetings for this project</p>
+	<p class="empty-list-message text-muted">No meetings for this project</p>
 </div>
 
 <section ng-if="meetingList.$resolved && (meetingList.items | filter:{past:false}).length>0">
