--- a/src/main/webapp/components/task/edit.html
+++ b/src/main/webapp/components/task/edit.html
@@ -9,7 +9,7 @@
 	
 			<div layout="horizontal" layout-align="center center">
 				<div>
-					<material-checkbox ng-model="task.completed" aria-label="Completed"></material-checkbox>
+					<material-checkbox class="checkbox-bigger" ng-model="task.completed" aria-label="Completed"></material-checkbox>
 				</div>
 				<div flex>
 					<tf-float label="Title" value="task.title" class="tf-float-full-with input-lg"></tf-float>
