--- a/src/main/webapp/app.css
+++ b/src/main/webapp/app.css
@@ -88,7 +88,9 @@ material-whiteframe.fillview {
 .empty-list-message {
 	text-align: center;
 	margin:25px;
-	color:#A8A8A8;
+}
+.empty-field-message {
+	font-size:12px;
 }
 
 #appview material-circular-progress .inset {
