--- a/src/main/webapp/components/project/list.html
+++ b/src/main/webapp/components/project/list.html
@@ -5,7 +5,7 @@
 	</div>
 	
 	<div ng-if="entityList.$resolved && (!entityList.items || entityList.items.length==0)">
-		<p class="empty-list-message">You don't have any project</p>
+		<p class="empty-list-message text-muted">You don't have any project</p>
 	</div>
 
 	<a class="unstyled" ng-repeat="entity in entityList.items" ng-href="#/project/{{entity.id}}" ng-if="entityList.$resolved  && (entityList.items.length>0)">
