--- a/src/main/webapp/components/task/list.html
+++ b/src/main/webapp/components/task/list.html
@@ -9,7 +9,7 @@
 </div>
 
 <div ng-if="taskList.$resolved && (!taskList.items || taskList.items.length==0)">
-	<p class="empty-list-message">No task yet for this project</p>
+	<p class="empty-list-message text-muted">No task yet for this project</p>
 </div>
 
 <section ng-repeat="(groupValue,taskGroupedList) in taskList.items | groupBy:'completed'" ng-if="taskList.$resolved && taskList.items.length>0">
@@ -23,11 +23,35 @@
 					<material-item ng-repeat="task in taskGroupedList"> 
 						<material-item-content>
 							<div class="material-tile-left">
-								<material-checkbox ng-model="task.completed" aria-label="Completed" ng-click="task.$save()"></material-checkbox>
+								<material-checkbox class="checkbox-bigger" ng-model="task.completed" aria-label="Completed" ng-click="task.$save()"></material-checkbox>
 							</div>
 							<div class="material-tile-content" ng-click="goto(task)" style="cursor: pointer;" flex>
 								<h3>{{task.title}}</h3>
 								<p>{{task.description}}</p>
+							</div>
+							<div class="material-tile-right" ng-click="goto(task)" style="cursor: pointer;" layout="horizontal" layout-align="center center">
+								<div layout="horizontal" style="text-align: center;">
+									<div layout="vertical" layout-align="center center" class="task-detail-box" style="width:50px; ">
+										<div ng-show="task.priority">
+											<span>P{{task.priority}}</span>
+										</div>
+										<div ng-show="!task.priority" class="text-muted empty-field-message">P?</div>
+									</div>
+									<div layout="vertical" layout-align="center center" class="task-detail-box" style="width:100px; ">
+										<div ng-show="task.dueDate">
+											<span>{{task.dueDate|date:'shortDate'}}</span>
+										</div>
+										<div ng-show="!task.dueDate" class="text-muted empty-field-message">no due date</div>
+									</div>
+									<div layout="vertical" layout-align="center center" class="task-detail-box" style="width:80px; padding-right:0;">
+										<div ng-show="task.assignee">
+											<img class="face" src="about:blank" ng-src="{{task.assignee.iconUrl ? task.assignee.iconUrl : '/img/face.png'}}" style="margin:0"/>
+											<br/>
+											<small>{{task.assignee.firstName}}</small>
+										</div>
+										<div ng-show="!task.assignee" class="text-muted empty-field-message">no one assigned</div>
+									</div>
+								</div>
 							</div>
 						</material-item-content>
 						<material-divider ng-if="!$last"></material-divider>
