--- a/src/main/webapp/components/meeting/list.html
+++ b/src/main/webapp/components/meeting/list.html
@@ -6,16 +6,18 @@
 	<p class="empty-list-message text-muted">No meetings for this project</p>
 </div>
 
-<section ng-if="meetingList.$resolved && (meetingList.items | filter:{past:false}).length>0">
-	<material-subheader>Upcoming meetings</material-subheader>
-	<material-whiteframe class="material-whiteframe-z1" layout layout-align="center center" ng-repeat="meeting in meetingList.items | filter:{past:false}" ng-if="meetingList.$resolved && meetingList.items.length>0">
+<section  ng-if="meetingList.$resolved && (meetingList.items | filter:filter_isToBeScheduled).length>0">
+	<material-subheader>To be scheduled</material-subheader>
+	<material-whiteframe class="material-whiteframe-z1" layout layout-align="center center" ng-repeat="meeting in meetingList.items | filter:filter_isToBeScheduled" ng-if="meetingList.$resolved && meetingList.items.length>0">
 		<material-content flex>
 			<section>
 				<material-list layout="vertical"> 
-					<material-item> 
+					<material-item>
 						<material-item-content>
-							<div class="material-tile-left">
-								{{meeting.timestamp|date:'shortDate'}}
+							<div class="material-tile-left" style="text-align:center; min-width:100px">
+								<div class="list-item-box list-item-box-left">
+									<material-icon icon="/img/icons/ic_help_48px.svg"></material-icon>
+								</div>
 							</div>
 							<div class="material-tile-content" ng-click="goto(meeting)" style="cursor: pointer;" flex>
 								<h3>{{meeting.title}}</h3>
@@ -29,16 +31,47 @@
 	</material-whiteframe>
 </section>
 
-<section  ng-if="meetingList.$resolved && (meetingList.items | filter:{past:true}).length>0">
-	<material-subheader>Past meetings</material-subheader>
-	<material-whiteframe class="material-whiteframe-z1" layout layout-align="center center" ng-repeat="meeting in meetingList.items | filter:{past:true}" ng-if="meetingList.$resolved && meetingList.items.length>0">
+<section ng-if="meetingList.$resolved && (meetingList.items | filter:filter_isNotPast).length>0">
+	<material-subheader>Upcoming meetings</material-subheader>
+	<material-whiteframe class="material-whiteframe-z1" layout layout-align="center center" ng-repeat="meeting in meetingList.items | filter:filter_isNotPast" ng-if="meetingList.$resolved && meetingList.items.length>0">
 		<material-content flex>
 			<section>
 				<material-list layout="vertical"> 
 					<material-item> 
 						<material-item-content>
-							<div class="material-tile-left">
-								{{meeting.timestamp|date:'shortDate'}}
+							<div class="material-tile-left" style="text-align:center; min-width:100px">
+								<div class="list-item-box list-item-box-left">
+									<span class="meeting-day">{{meeting.timestamp|date:'dd'}}</span>
+									<br/>
+									<span class="meeting-month">{{meeting.timestamp|date:'MMMM'}}</span>
+								</div>
+							</div>
+							<div class="material-tile-content" ng-click="goto(meeting)" style="cursor: pointer;" flex>
+								<h3>{{meeting.title}}</h3>
+								<p>{{meeting.description}}</p>
+							</div>
+						</material-item-content>
+					</material-item>
+				</material-list>
+			</section>
+		</material-content>
+	</material-whiteframe>
+</section>
+
+<section  ng-if="meetingList.$resolved && (meetingList.items | filter:filter_isPast).length>0">
+	<material-subheader>Past meetings</material-subheader>
+	<material-whiteframe class="material-whiteframe-z1" layout layout-align="center center" ng-repeat="meeting in meetingList.items | filter:filter_isPast" ng-if="meetingList.$resolved && meetingList.items.length>0">
+		<material-content flex>
+			<section>
+				<material-list layout="vertical"> 
+					<material-item> 
+						<material-item-content>
+							<div class="material-tile-left" style="text-align:center; min-width:100px">
+								<div class="list-item-box list-item-box-left">
+									<span class="meeting-day">{{meeting.timestamp|date:'dd'}}</span>
+									<br/>
+									<span class="meeting-month">{{meeting.timestamp|date:'MMMM'}}</span>
+								</div>
 							</div>
 							<div class="material-tile-content" ng-click="goto(meeting)" style="cursor: pointer;" flex>
 								<h3>{{meeting.title}}</h3>
