--- a/src/main/webapp/app.css
+++ b/src/main/webapp/app.css
@@ -7,25 +7,25 @@ html {
 
 .menu-item {
 	background-color: #fff;
-	border: 0;
+	border-left: 4px solid transparent;
 	cursor: pointer;
 	display: block;
 	color: #333;
 	line-height: 45px;
 	margin: 0;
 	outline: 0;
-	padding: 0 20px;
+	padding: 0 15px;
 	position: relative;
 	text-align: left;
 	text-decoration: none;
 	width: 100%;
 	z-index: 1;
 	-webkit-transition: .2s linear;
-	-webkit-transition-property: color,background-color;
+	-webkit-transition-property: color,background-color,border-left;
 	-moz-transition: .2s linear;
-	-moz-transition-property: color,background-color;
+	-moz-transition-property: color,background-color,border-left;
 	transition: .2s linear;
-	transition-property: color,background-color;
+	transition-property: color,background-color,border-left;
 }
 .menu-item * {
 	vertical-align: middle;
@@ -43,6 +43,7 @@ html {
 .menu-item:focus, 
 .menu-item:hover {
 	color: #4285f4;
+	border-left: 4px solid #3e50b4; 
 }
 
 
