--- a/src/main/webapp/components/meeting/list.html
+++ b/src/main/webapp/components/meeting/list.html
@@ -15,13 +15,42 @@
 					<material-item>
 						<material-item-content>
 							<div class="material-tile-left" style="text-align:center; min-width:120px">
-								<div class="list-item-box list-item-box-left">
-									<material-icon icon="/img/icons/ic_help_48px.svg"></material-icon>
-								</div>
+								<material-icon icon="/img/icons/ic_help_48px.svg"></material-icon>
 							</div>
 							<div class="material-tile-content" ng-click="goto(meeting)" style="cursor: pointer;" flex>
-								<h3>{{meeting.title}}</h3>
-								<p>{{meeting.description}}</p>
+								<div class="list-item-box list-item-box-right">
+									<h3>{{meeting.title}}</h3>
+									<p>{{meeting.description}}</p>
+									<ul style="margin-top:0">
+										<li>
+											<span style="vertical-align:middle">18 November, 08:00 &ndash; 10:00</span>
+											<material-button style="vertical-align:middle">
+												<material-icon icon="/img/icons/ic_check_18px.svg"></material-icon>
+											</material-button>
+											<material-button style="vertical-align:middle">
+												<material-icon icon="/img/icons/ic_close_18px.svg"></material-icon>
+											</material-button>
+										</li>
+										<li>
+											<span style="vertical-align:middle">18 November, 10:00 &ndash; 12:00</span>
+											<material-button style="vertical-align:middle">
+												<material-icon icon="/img/icons/ic_check_18px.svg"></material-icon>
+											</material-button>
+											<material-button style="vertical-align:middle">
+												<material-icon icon="/img/icons/ic_close_18px.svg"></material-icon>
+											</material-button>
+										</li>
+										<li>
+											<span style="vertical-align:middle">19 November, 10:00 &ndash; 12:00</span>
+											<material-button style="vertical-align:middle">
+												<material-icon icon="/img/icons/ic_check_18px.svg"></material-icon>
+											</material-button>
+											<material-button style="vertical-align:middle">
+												<material-icon icon="/img/icons/ic_close_18px.svg"></material-icon>
+											</material-button>
+										</li>
+									</ul>
+								</div>
 							</div>
 						</material-item-content>
 					</material-item>
