--- a/src/main/webapp/components/discussion/discussions.html
+++ b/src/main/webapp/components/discussion/discussions.html
@@ -3,7 +3,7 @@
 </div>
 
 <material-whiteframe class="fillview material-whiteframe-z1" layout layout-align="center center" ng-show="project.$resolved && iframeready">
-	<material-content flex style="height:100%; overflow:hidden;">
+	<material-content class="material-content-padded" flex style="height:100%; overflow:hidden;">
 		<iframe name="_discussion_frame" id="_discussion_frame" ng-src="{{iframeSrc}}" style="width: 100%; height: 100%" frameborder="0" iframe-onload="iframeLoaded()"></iframe>
 	</material-content>
 </material-whiteframe>
