--- a/src/main/webapp/components/task/edit.html
+++ b/src/main/webapp/components/task/edit.html
@@ -3,7 +3,7 @@
 </div>
 
 <material-whiteframe class="material-whiteframe-z1" layout layout-align="center center" ng-if="task.$resolved">
-	<material-content flex>
+	<material-content class="material-content-padded" flex>
 	
 		<form>
 	
@@ -37,6 +37,12 @@
 			<div layout="horizontal" layout-align="center center">
 				<div flex>
 					<tf-float label="Description" value="task.description" type="textarea" class="tf-float-full-with"></tf-float>
+				</div>
+			</div>
+			
+			<div layout="horizontal">
+				<div class="material-content-actions" flex>
+					<material-button class="material-button-raised" ng-href="#/project/{{currentProject.id}}/tasks">OK</material-button>
 				</div>
 			</div>
       
