meeting poll start/end date

--- a/src/main/webapp/components/meeting/edit.html
+++ b/src/main/webapp/components/meeting/edit.html
@@ -24,6 +24,10 @@
 					<div style="text-align:center">
 						<material-button class="material-button-raised" ng-click="meeting.poll.proposedDates.push(null)">Add Date</material-button>
 					</div>
+					<div>
+						<tf-float label="Poll start date" value="meeting.poll.startDate" type="date"></tf-float>
+						<tf-float label="Poll end date" value="meeting.poll.endDate" type="date"></tf-float>
+					</div>
 				</div>
 				<div layout="vertical" flex>
 					<div>
