removed unused auth scopes. Replaced userInfo (from g+api) with currentUser (from backend)

--- a/src/main/webapp/components/dashboard/dashboard.html
+++ b/src/main/webapp/components/dashboard/dashboard.html
@@ -1,45 +1,1 @@
-<material-tabs class="material-theme-transparent">
-	<material-tab label="MyTab">
-		<div layout layout-align="center center">
-			<material-whiteframe class="material-whiteframe-z1" flex>
-				rgrtgert
-			</material-whiteframe>
-		</div>
-	</material-tab>
-	<material-tab label="MyTa3b">
-		<div layout layout-align="center center">
-			<material-whiteframe class="material-whiteframe-z1" flex>
-				rgrtgert2
-			</material-whiteframe>
-		</div>
-	</material-tab>
-	<material-tab label="MyTab2">
-		<div layout layout-align="center center" flex>
-			<material-whiteframe class="material-whiteframe-z1" flex>
-				rgrtgert3
-			</material-whiteframe>
-		</div>
-	</material-tab>
-
-</material-tabs>
-
-<material-whiteframe class="material-whiteframe-z1" layout layout-align="center center">
-	<span>Hello World Quantum Paper!</span>
-</material-whiteframe>
-
-<material-whiteframe class="material-whiteframe-z1" layout layout-align="center center">
-	<div>
-		<p>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent suscipit vehicula velit, et fermentum nunc. Suspendisse sed placerat tortor. Vivamus sapien lorem, viverra nec euismod facilisis, vulputate id orci. Vestibulum porta lacinia lorem, non tristique nisi interdum quis. Vivamus ultricies eros nisi, vel aliquet sem gravida eu. Curabitur sem ipsum, lacinia ac mollis quis, blandit eget nisi. Nullam molestie, massa vitae tristique feugiat, eros risus cursus enim, nec maximus purus elit non urna. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nulla sed purus vel enim sodales varius. Nulla sed magna quis erat congue blandit ut in quam. Duis dignissim ac eros quis porta. Curabitur id tempor neque. Integer accumsan vestibulum rhoncus.
-		</p>
-		<p>
-		Morbi ut egestas purus. Vivamus dignissim a ligula vitae placerat. Vestibulum gravida nibh nec tortor commodo porttitor. Vivamus ut sem ex. Cras tempor risus dignissim, pellentesque mi in, blandit lectus. Morbi efficitur tincidunt ipsum vitae imperdiet. Donec dictum ullamcorper velit. Fusce et risus sit amet nibh mollis gravida. Vestibulum sed magna dapibus, sagittis urna vitae, bibendum magna. In ullamcorper auctor nisi, lacinia imperdiet lectus tincidunt sit amet. Aenean at pretium tortor. Integer fringilla libero nisl, id euismod metus semper id. Nulla in ex sit amet odio placerat imperdiet vel sed arcu. Quisque elementum vitae dolor at condimentum. Pellentesque mattis ullamcorper felis, ac iaculis augue.
-		</p>
-		<p>
-		Donec nec orci imperdiet, tempus ex et, aliquam velit. Nullam est nibh, porttitor rutrum ante sit amet, rhoncus pellentesque quam. Mauris tincidunt erat eu arcu cursus finibus. Nunc nec aliquet neque. Nullam et posuere ligula, at eleifend turpis. Donec efficitur eu quam ut efficitur. Vivamus egestas magna aliquet, porttitor lorem vitae, feugiat urna. Pellentesque eu urna commodo, tristique massa sed, hendrerit augue. In efficitur urna nec sapien dignissim cursus. Vestibulum elit nisl, feugiat id bibendum quis, blandit sed dui. Aliquam erat volutpat. Vestibulum sem tortor, pharetra eu ultricies at, condimentum et libero. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed ac leo nec ipsum laoreet tempor. Maecenas sapien diam, sagittis eu pellentesque eu, vestibulum eget tellus.
-		</p>
-		<p>
-		Pellentesque quis ipsum quis tellus finibus finibus. Nulla imperdiet purus sed tortor interdum maximus. Ut rutrum enim nec dolor fermentum pellentesque. Curabitur ut dui in tortor mollis rutrum et quis nulla. Cras condimentum feugiat lobortis. Donec a congue turpis. Duis id augue eget nisi vehicula vehicula vel a ante. Sed nunc elit, maximus vel placerat vel, venenatis sit amet tortor. Praesent volutpat ipsum sit amet volutpat hendrerit. Ut dapibus vulputate mauris quis sodales. Phasellus et congue mauris. Interdum et malesuada fames ac ante ipsum primis in faucibus. Phasellus lacinia elit a ligula convallis condimentum eu et nisi. Donec dapibus nisl id orci sollicitudin vestibulum. Suspendisse porta tempor mauris non iaculis. Suspendisse potenti.
-		</p>
-	</div>
-</material-whiteframe>
+&nbsp;
