--- a/src/main/webapp/components/meeting/list.html
+++ b/src/main/webapp/components/meeting/list.html
@@ -75,6 +75,11 @@
 								<h3>{{meeting.title}}</h3>
 								<p>{{meeting.description}}</p>
 							</div>
+							<div class="material-tile-right" style="text-align:center; min-width:150px">
+								<material-button ng-href="{{getHangoutLink(meeting)}}" target="_blank" data-ng-show="meeting.timestamp && !meeting.past">
+									<material-icon icon="/img/icons/ic_hangout_24px.svg"></material-icon> Hangout&nbsp;
+								</material-button>
+							</div>
 						</material-item-content>
 					</material-item>
 				</material-list>
